blogs/aks_loadbalancing_options/printhostname-service-private.yaml
apiVersion: v1
kind: Service
metadata:
  name: printhostname-svc-internal
  annotations:
    service.beta.kubernetes.io/azure-load-balancer-internal: "true"
spec:
  type: LoadBalancer
  ports:
  - port: 80
    targetPort: 80
  selector:
    app: printhostname
