blogs/aks_loadbalancing_options/printhostname-service-public.yaml
apiVersion: v1
kind: Service
metadata:
  name: debug-svc
spec:
  type: LoadBalancer
  ports:
  - port: 80
  selector:
    app: debug
