blogs/aks_loadbalancing_options/printhostname-ingress-agic.yaml
apiVersion: v1
kind: Service
metadata:
  name: printhostname-svc
spec:
  type: ClusterIP
  ports:
  - port: 80
  selector:
    app: printhostname
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: printhostname-agic-ig
  annotations:
    kubernetes.io/ingress.class: azure/application-gateway
spec:
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: printhostname-svc
            port:
              number: 80
